--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,12 +30,12 @@
     <link rel="manifest" href="/favicon/site.webmanifest" />
     <meta name="application-name" content="WheresRupee" />
     <meta name="apple-mobile-web-app-title" content="WheresRupee" />
+    <meta name="google-adsense-account" content="ca-pub-7335093522579997">
     
     <!-- Optional: Add analytics script or font preload in future -->
     <!-- <script defer data-domain="wheresrupee.com" src="https://plausible.io/js/script.js"></script> -->
   
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7335093522579997"
-     crossorigin="anonymous"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
