--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,6 +31,11 @@
     <meta name="application-name" content="WheresRupee" />
     <meta name="apple-mobile-web-app-title" content="WheresRupee" />
     <meta name="google-adsense-account" content="ca-pub-7335093522579997">
+    <a href="https://www.effectiveratecpm.com/gdtdg88t5?key=e6737419c9adb3e457321229235ce78c" 
+       target="_blank" rel="nofollow" style="text-decoration: none; color: #1a73e8;">
+        Visit WheresRupee.com
+    </a>
+
     
     <!-- Optional: Add analytics script or font preload in future -->
     <!-- <script defer data-domain="wheresrupee.com" src="https://plausible.io/js/script.js"></script> -->
