--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -45,5 +45,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type='text/javascript' src='//pl26279206.effectiveratecpm.com/c9/06/62/c9066258bd43b2dc1ca01204535b49e7.js'></script>
   </body>
 </html>
